--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
         <button id="nextBtn1">Next</button>
         <button id="nextBtn10">Next 10</button>
         <button id="nextBtn100">Next 100</button>
+        <button id="playPauseBtn">▶</button>
       </div>
     </div>
   </body>
